v3.9.0 (XXXX-XX-XX)
-------------------

* Fixed ES-1025: fixed a performance regression caused by different hash
  calculation for primitive types like `uint64_t` and new the `Identifier`
  wrapper and derived types.

* BTS-707: rename "hardened" option value for `--server.support-info-api`
  startup option to "admin".

* APM-292: Added new AQL function SHARD_ID.

* Extend timeouts for caching collection counts and index selectivity estimates
  on coordinators from 15s/90s to 180s. This change will cause less requests to
  be made from coordinators to DB servers to refresh info about collection
  counts and index estimates as part of AQL queries. The cached info is used in
  cluster query execution plans only and is not required to be fully up-to-date.

* Improved performance in replication dump protocol by inserting arrays of
  documents instead of one document at a time and also not retrieving the
  document revision field when not needed.

* APM-78: Added startup security option `--foxx.allow-install-from-remote` to
  allow installing Foxx apps from remote URLs other than Github. The option is
  turned off by default.

* Fixed BTS-693: Sort-limit rule now always ensures proper LIMIT node placement
  to avoid possible invalid results in the fullCount data

* Updated OpenSSL to 1.1.1m and OpenLDAP to 2.6.0.

* Updated arangosync to 2.7.0.

* Fixed PRESUPP-439: In arangoimport, for CSV and TSV files, it could happen
  that a buffer containing only the header would be sent to the server, and also
  batches would contain the documents equivalent to the csv rows in them, but
  not the header, which should be sent together with the documents.

* Changed various default values for RocksDB to tune operations for different
  typical scenarios like gp2 type volumes and gp3 type volumes and locally
  attached SSDs with RAID0:
  - `--rocksdb.level0-slowdown-trigger` has been decreased from 20 to 16
  - `--rocksdb.level0-stop-trigger` has been increased from 36 to 256